# GCP-Drone-Comms-Unit

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  base_node.py  example_user_node.json  mypy.ini  part3_display_bracket_LEFT.stl  part3_display_bracket_RIGHT.stl  part6_rm_pocket_cradle.stl  part7_power_bank_cradle.stl  ruff.toml  sma_bulkhead_bracket.stl  tbeam_cradle.stl
.agents/: README.md
.claude/hooks/: session-start.sh
.github/: copilot-instructions.md
docs/: ARCHITECTURE.md  AUDIT_M2_AUTH.md  AUDIT_REPORT.md  BRANCHES.md  C4.md  CHARTER.md  GAP_ANALYSIS.md  GAP_ANALYSIS_SCOUT.md  IMPLEMENTATION_PLAN.md  NEXTSTEPS.md  NEXT_STEPS.md  PLAN_PEER_REVIEW.md  PLAN_PEER_REVIEW_SCOUT.md  PR_BODY.md  PR_BODY_fc_pilot.md  ROADMAP.md  ROADMAP_RECONCILIATION.md
flightctl/: README.md  rc_bridge.py  run_commander.py  run_gateway.py
hardware/: AGENTS.md
jetson_gcs_stls/: README.md  part1_riser_shell_RIGHT.stl
meshsa_base_service/: INSTALL_base_node.md  base.env.example
meshsa_framework/meshsa/: pyproject.toml
meshsa_framework/meshsa/src/meshsa/: __init__.py  codec.py  config.py  cot.py  errors.py  models.py  node.py  registry.py  version.py
meshsa_framework/meshsa/src/meshsa/transports/: loopback.py  meshtastic_radio.py  tak.py
meshsa_framework/meshsa/tests/: conftest.py  test_registry_codec.py  test_router.py  test_tak.py  test_version_models.py
ops/: AGENTS.md
pi5_node_kit/: README_pi5_node.md
tools/: Dockerfile  Makefile
(+76 files in other folders)
